2005-06-15	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.c(exo_mime_database_init): Be sure to call
	  xdg_mime_init() before setting up the reload callback function,
	  because else the first call to a public xdg_mime_* function will
	  lead to an invokation of xdg_mime_init(), which in turn will fire
	  all reload callbacks, which in turn will make the ExoMimeDatabase
	  drop it's internal state, which means that in the worst case, all
	  the MIME information would be loaded twice on program startup.
	* exo/xdgmime/xdgmime.{c,h}: The xdg_mime_init() function must be
	  public.
	* python/exo.defs: Add the exo_mime_info_lookup_icon_name() method to
	  the Python bindings.

2005-06-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-info.{c,h}: Add a method exo_mime_info_lookup_icon_name()
	  which determines the name of a suitable icon in a given icon theme.
	  The result of the lookup is cached internally. The purpose of this
	  change is to allow for better caching of mime icons in the application
	  using this interface. The implementation tries to reduce memory
	  usage as much as possible.

2005-06-13	Benedikt Meurer <benny@xfce.org>

	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.
	* configure.ac, THANKS, po/fr.po: Add french translations, thanks to
	  Stephane Roy <sroy@j2n.net>.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* configure.ac, po/es.po, THANKS: Add spanish translations from
	  Patricio Carr <pato@patocarr.com>.

2005-06-08	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Check for libintl.h as well.
	* exo/exo-private.c: Need to include locale.h here to get LC_MESSAGES
	  on all systems.

2005-06-05	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-info.c: Use the MIME-Type's name as fallback if the