@@ -1,6 +1,6 @@
 /* $Id: exo.h,v 1.2 2004/09/17 09:48:24 bmeurer Exp $ */
 /*-
- * Copyright (c) 2004 os-cillation e.K.
+ * Copyright (c) 2004-2005 os-cillation e.K.
  *
  * Written by Benedikt Meurer <benny@xfce.org>.
  *
@@ -46,6 +46,28 @@ G_BEGIN_DECLS;
 extern const guint exo_major_version;
 extern const guint exo_minor_version;
 extern const guint exo_micro_version;
+
+/* with newer GObject versions it's possible to avoid the unnecessary
+ * copying of the name, nick and blurb settings for GParamSpec's.
+ */
+#if defined(G_PARAM_STATIC_NAME) && defined(G_PARAM_STATIC_NICK) && defined(G_PARAM_STATIC_BLURB)
+#define EXO_PARAM_READABLE  (G_PARAM_READABLE \
+                           | G_PARAM_STATIC_NAME \
+                           | G_PARAM_STATIC_NICK \
+                           | G_PARAM_STATIC_BLURB)
+#define EXO_PARAM_WRITABLE  (G_PARAM_WRITABLE \
+                           | G_PARAM_STATIC_NAME \
+                           | G_PARAM_STATIC_NICK \
+                           | G_PARAM_STATIC_BLURB)
+#define EXO_PARAM_READWRITE (G_PARAM_READWRITE \
+                           | G_PARAM_STATIC_NAME \
+                           | G_PARAM_STATIC_NICK \
+                           | G_PARAM_STATIC_BLURB)
+#else
+#define EXO_PARAM_READABLE  (G_PARAM_READABLE)
+#define EXO_PARAM_WRITABLE  (G_PARAM_WRITABLE)
+#define EXO_PARAM_READWRITE (G_PARAM_READWRITE)
+#endif
 
 G_END_DECLS;
 
